tests/invalid/UnionType_Invalid_12.whiley
public export method test():
    (&int)|(&bool) x = new 1
    *x = false
    (&int)|(&bool) y = ((&int)|(&bool)) new 1
    *y = false
